fix nav z-index

--- a/src/template/styles/sass/responsive.sass
+++ b/src/template/styles/sass/responsive.sass
@@ -322,7 +322,7 @@
 		transition: .3s
 		z-index: -2
 		&_toggle
-			z-index: 1
+			z-index: 20
 			opacity: 1
 			transform: translateY(0px)
 			visibility: visible
